# project

./: 123.txt  CMakeLists.txt  log.txt  out.txt  test.cpp
exapmle/: design.are  design.info  design.net  design.topo  desing.area  desing.info  desing.net
exapmle/case0000/: design.are  design.info  design.net  design.topo
exapmle/case01/: design.info
exapmle/case02/: design.are  design.info  design.net  design.topo
exapmle/case03/: design.are  design.info  design.net
exapmle/case04/: design.info  design.topo
exapmle/case30000/: design.are
include/: ConCleck.h  Initial.h  Initial0.h  Initial1.h  Initial2.h  Initial3.h  Initial4.h  Initial5.h  Initial6.h  Initial7.h  Partitioning.h  class.h  con_initial.h  my_time.h  read.h  sparsification.h  write.h
python/: bfs.py  delete.py  edge.py  total_aera.py
src/: main.cpp
test/: learn.cpp  test.cpp  test_partitiong.cpp  testtime.cpp  testwrite.cpp
